--- a/PreEntrega2-Maica/index.html
+++ b/PreEntrega2-Maica/index.html
@@ -4,13 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tienda de Juegos</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <h1>TIENDA DE JUEGOS</h1>
+
+    <div>
+        <label class="Filtro" for="genero">Filtrar por género:</label>
+        <input type="text" id="genero" placeholder="Escribe el género">
+    </div>
+
+    <div id="game-cards-container"></div>
+
     <script src="./js/main.js"></script>
+    
 </body>
 
 </html>
+
